// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`globSearch 1`] = `
Object {
  "cwd": "G:\\\\Users\\\\The Project\\\\nodejs-yarn\\\\ws-glob2\\\\packages\\\\glob-search",
  "history": Array [
    "G:\\\\Users\\\\The Project\\\\nodejs-yarn\\\\ws-glob2\\\\packages\\\\glob-search",
  ],
  "options": Object {
    "cwd": "G:\\\\Users\\\\The Project\\\\nodejs-yarn\\\\ws-glob2\\\\packages\\\\glob-search",
    "disableThrowWhenEmpty": true,
    "followSymlinkedDirectories": true,
    "ignore": Array [],
    "markDirectories": true,
    "pathLib": Object {
      "_makeLong": [Function],
      "basename": [Function],
      "delimiter": ";",
      "dirname": [Function],
      "extname": [Function],
      "format": [Function],
      "isAbsolute": [Function],
      "join": [Function],
      "normalize": [Function],
      "parse": [Function],
      "posix": Object {
        "_makeLong": [Function],
        "basename": [Function],
        "delimiter": ":",
        "dirname": [Function],
        "extname": [Function],
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "normalize": [Function],
        "parse": [Function],
        "posix": [Circular],
        "relative": [Function],
        "resolve": [Function],
        "sep": "/",
        "toNamespacedPath": [Function],
        "win32": [Circular],
      },
      "relative": [Function],
      "resolve": [Function],
      "sep": "\\\\",
      "toNamespacedPath": [Function],
      "upath": PathWrap {
        "PathWrap": [Function],
        "default": [Circular],
        "fn": PathWrap {
          "_makeLong": [Function],
          "default": [Circular],
          "delimiter": ";",
          "filterNameEntry": [Function],
          "fn": PathWrap {
            "basename": [Function],
            "constructor": [Function],
            "dirname": [Function],
            "extname": [Function],
            "fn": [Circular],
            "format": [Function],
            "isAbsolute": [Function],
            "join": [Function],
            "normalize": [Function],
            "parse": [Function],
            "relative": [Function],
            "resolve": [Function],
            "sep": "/",
          },
          "posix": PathWrap {
            "default": [Circular],
            "fn": [Circular],
            "name": "posix",
            "posix": [Circular],
            "sep": "/",
          },
          "sep": "/",
          "toNamespacedPath": [Function],
          "upath": [Circular],
          "vaildNameEntry": [Function],
          "win32": PathWrap {
            "default": [Circular],
            "fn": [Circular],
            "name": "win32",
            "sep": "/",
            "win32": [Circular],
          },
        },
        "name": "upath",
        "sep": "/",
        "upath": [Circular],
      },
      "win32": [Circular],
    },
    "sortCompareFn": [Function],
    "stopPath": Array [
      "G:\\\\Users\\\\The Project\\\\nodejs-yarn\\\\ws-glob2",
    ],
    "unique": true,
  },
  "pattern": Array [
    "*/demo.ts",
  ],
  "value": Array [
    "test/demo.ts",
  ],
}
`;

exports[`globSearchSync 1`] = `
Object {
  "cwd": "G:\\\\Users\\\\The Project\\\\nodejs-yarn\\\\ws-glob2\\\\packages\\\\glob-search",
  "history": Array [
    "G:\\\\Users\\\\The Project\\\\nodejs-yarn\\\\ws-glob2\\\\packages\\\\glob-search",
  ],
  "options": Object {
    "cwd": "G:\\\\Users\\\\The Project\\\\nodejs-yarn\\\\ws-glob2\\\\packages\\\\glob-search",
    "disableThrowWhenEmpty": true,
    "followSymlinkedDirectories": true,
    "ignore": Array [],
    "markDirectories": true,
    "pathLib": Object {
      "_makeLong": [Function],
      "basename": [Function],
      "delimiter": ";",
      "dirname": [Function],
      "extname": [Function],
      "format": [Function],
      "isAbsolute": [Function],
      "join": [Function],
      "normalize": [Function],
      "parse": [Function],
      "posix": Object {
        "_makeLong": [Function],
        "basename": [Function],
        "delimiter": ":",
        "dirname": [Function],
        "extname": [Function],
        "format": [Function],
        "isAbsolute": [Function],
        "join": [Function],
        "normalize": [Function],
        "parse": [Function],
        "posix": [Circular],
        "relative": [Function],
        "resolve": [Function],
        "sep": "/",
        "toNamespacedPath": [Function],
        "win32": [Circular],
      },
      "relative": [Function],
      "resolve": [Function],
      "sep": "\\\\",
      "toNamespacedPath": [Function],
      "upath": PathWrap {
        "PathWrap": [Function],
        "default": [Circular],
        "fn": PathWrap {
          "_makeLong": [Function],
          "default": [Circular],
          "delimiter": ";",
          "filterNameEntry": [Function],
          "fn": PathWrap {
            "basename": [Function],
            "constructor": [Function],
            "dirname": [Function],
            "extname": [Function],
            "fn": [Circular],
            "format": [Function],
            "isAbsolute": [Function],
            "join": [Function],
            "normalize": [Function],
            "parse": [Function],
            "relative": [Function],
            "resolve": [Function],
            "sep": "/",
          },
          "posix": PathWrap {
            "default": [Circular],
            "fn": [Circular],
            "name": "posix",
            "posix": [Circular],
            "sep": "/",
          },
          "sep": "/",
          "toNamespacedPath": [Function],
          "upath": [Circular],
          "vaildNameEntry": [Function],
          "win32": PathWrap {
            "default": [Circular],
            "fn": [Circular],
            "name": "win32",
            "sep": "/",
            "win32": [Circular],
          },
        },
        "name": "upath",
        "sep": "/",
        "upath": [Circular],
      },
      "win32": [Circular],
    },
    "sortCompareFn": [Function],
    "stopPath": Array [
      "G:\\\\Users\\\\The Project\\\\nodejs-yarn\\\\ws-glob2",
    ],
    "unique": true,
  },
  "pattern": Array [
    "*/demo.ts",
  ],
  "tapCatch": [Function],
  "value": Array [
    "test/demo.ts",
  ],
}
`;
